--- a/HW2/hw2.dSYM/Contents/Resources/Relocations/x86_64/hw2.yml
+++ b/HW2/hw2.dSYM/Contents/Resources/Relocations/x86_64/hw2.yml
@@ -2,8 +2,9 @@
 triple:          'x86_64-apple-darwin'
 binary-path:     '/Users/ruanzhanhao/Documents/Study/2023_Fall/ICS53/ICS53Fall/HW2/hw2'
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _quit, symObjAddr: 0x0, symBinAddr: 0x100003CE0, symSize: 0x10 }
-  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _quit, symObjAddr: 0x0, symBinAddr: 0x100003CE0, symSize: 0x10 }
-  - { offsetInCU: 0x56, offset: 0x56, size: 0x8, addend: 0x0, symName: _parseline, symObjAddr: 0x10, symBinAddr: 0x100003CF0, symSize: 0x100 }
-  - { offsetInCU: 0xBF, offset: 0xBF, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x110, symBinAddr: 0x100003DF0, symSize: 0x124 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _parseline, symObjAddr: 0x0, symBinAddr: 0x100003C20, symSize: 0xB0 }
+  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _parseline, symObjAddr: 0x0, symBinAddr: 0x100003C20, symSize: 0xB0 }
+  - { offsetInCU: 0xA1, offset: 0xA1, size: 0x8, addend: 0x0, symName: _quit, symObjAddr: 0xB0, symBinAddr: 0x100003CD0, symSize: 0x10 }
+  - { offsetInCU: 0xB6, offset: 0xB6, size: 0x8, addend: 0x0, symName: _eval, symObjAddr: 0xC0, symBinAddr: 0x100003CE0, symSize: 0x170 }
+  - { offsetInCU: 0x125, offset: 0x125, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x230, symBinAddr: 0x100003E50, symSize: 0xBB }
 ...
