--- a/HW2/hw2.dSYM/Contents/Resources/Relocations/x86_64/hw2.yml
+++ b/HW2/hw2.dSYM/Contents/Resources/Relocations/x86_64/hw2.yml
@@ -2,9 +2,11 @@
 triple:          'x86_64-apple-darwin'
 binary-path:     '/Users/ruanzhanhao/Documents/Study/2023_Fall/ICS53/ICS53Fall/HW2/hw2'
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _parseline, symObjAddr: 0x0, symBinAddr: 0x100003C20, symSize: 0xB0 }
-  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _parseline, symObjAddr: 0x0, symBinAddr: 0x100003C20, symSize: 0xB0 }
-  - { offsetInCU: 0xA1, offset: 0xA1, size: 0x8, addend: 0x0, symName: _quit, symObjAddr: 0xB0, symBinAddr: 0x100003CD0, symSize: 0x10 }
-  - { offsetInCU: 0xB6, offset: 0xB6, size: 0x8, addend: 0x0, symName: _eval, symObjAddr: 0xC0, symBinAddr: 0x100003CE0, symSize: 0x170 }
-  - { offsetInCU: 0x125, offset: 0x125, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x230, symBinAddr: 0x100003E50, symSize: 0xBB }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _parseline, symObjAddr: 0x0, symBinAddr: 0x100003A50, symSize: 0xD0 }
+  - { offsetInCU: 0x48, offset: 0x48, size: 0x8, addend: 0x0, symName: _parseline, symObjAddr: 0x0, symBinAddr: 0x100003A50, symSize: 0xD0 }
+  - { offsetInCU: 0xA8, offset: 0xA8, size: 0x8, addend: 0x0, symName: _quit, symObjAddr: 0xD0, symBinAddr: 0x100003B20, symSize: 0x10 }
+  - { offsetInCU: 0xBD, offset: 0xBD, size: 0x8, addend: 0x0, symName: _sigint_handler, symObjAddr: 0xE0, symBinAddr: 0x100003B30, symSize: 0x40 }
+  - { offsetInCU: 0xD2, offset: 0xD2, size: 0x8, addend: 0x0, symName: _waiting4pid, symObjAddr: 0x120, symBinAddr: 0x100003B70, symSize: 0x90 }
+  - { offsetInCU: 0x120, offset: 0x120, size: 0x8, addend: 0x0, symName: _eval, symObjAddr: 0x1B0, symBinAddr: 0x100003C00, symSize: 0x200 }
+  - { offsetInCU: 0x18F, offset: 0x18F, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x3B0, symBinAddr: 0x100003E00, symSize: 0x81 }
 ...
